# belay

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  anon_lint.py  pyproject.toml
.claude-plugin/: marketplace.json
.claude/skills/new-plugin/: SKILL.md
.github/workflows/: ci.yml  monthly-upgrade.yml
docs/: AUTHORING.md  PHILOSOPHY.md
plugins/acl-hook/: CLAUDE.md  README.md
plugins/acl-hook/.claude-plugin/: plugin.json
plugins/acl-hook/hooks/: acl_default.json  acl_hook.py  hook_utils.py  hooks.json
plugins/acl-hook/tests/: conftest.py  test_acl_hook.py
plugins/fs-acl-hook/: CLAUDE.md  README.md
plugins/fs-acl-hook/.claude-plugin/: plugin.json
plugins/fs-acl-hook/hooks/: fs_acl_hook.py  hooks.json
plugins/fs-acl-hook/tests/: conftest.py  test_fs_acl_hook.py
plugins/no-shirk-hook/: CLAUDE.md  README.md
plugins/no-shirk-hook/.claude-plugin/: plugin.json
plugins/no-shirk-hook/hooks/: hooks.json  no_shirk_hook.py
plugins/no-shirk-hook/tests/: conftest.py  test_no_shirk_hook.py
rules/: README.md  be-concise.md  comments-why-not-what.md  commit-messages-why-not-what.md  concrete-types.md  finish-the-work.md  ground-claims-in-data.md  honest-tests.md  keep-it-simple.md  match-the-codebase.md  minimal-scope.md  no-dead-code.md  no-defensive-defaults.md  no-speculative-generality.md  reuse-before-reinvent.md  root-cause-not-symptom.md  secure-by-default.md  surface-the-smell.md
tests/: test_anon_lint.py
