[project]
name = "belay"
version = "0.0.1"
description = "Claude Code plugin marketplace."
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"

[dependency-groups]
dev = [
    "bashlex>=0.18",
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.5",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Copied from clarity-auto-care: strict ratchet (ALL) with project-convention ignores.
select = ["ALL"]
ignore = [
    # Formatter conflicts
    "COM812",
    # Project conventions
    "RUF013",  # implicit-optional — explicit X | None used instead
    "RUF001",  # ambiguous unicode chars — bilingual (RU + EN) plugins need real Cyrillic
    "SIM110",  # explicit for-loops over any() — easier to extend with logging later
    "D203", "D213",  # docstring style conflicts (we use D211, D212)
    "G",    # logging-format
    "TRY003",
    "EM101", "EM102",
    "TID252",
]

[tool.ruff.lint.pylint]
max-args = 4
max-positional-args = 4
max-branches = 7
max-statements = 20
max-locals = 10
max-bool-expr = 3
max-nested-blocks = 3
max-returns = 5

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests get to use asserts, magic numbers, long lines, and conftest-style
# imports-inside-functions (post sys.path injection).
"**/tests/**" = ["S101", "PLR2004", "E501", "ANN", "D", "PT011", "SLF001", "INP001", "PLR0913", "PLC0415", "S108"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true  # bashlex has no stubs
# Per-plugin conftest.py files collide as one module under mypy; they're
# pytest fixtures with no typing surface, so just skip them.
exclude = ['conftest\.py$']

[[tool.mypy.overrides]]
module = "bashlex.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Vendored verbatim — strict typing happens during the YAML refactor.
module = "acl_hook"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["plugins", "tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
